# rv-crypto

./: Larva script.lrv  README.md  function_tracing_overheads.csv
SECube_Overheads/: readme.md  results.csv
SECube_Overheads/all_sites_data/: deloplen.com_data.txt  detail.tmall.com_data.txt  pages.tmall.com_data.txt  www.163.com_data.txt  www.360.cn_data.txt  www.aliexpress.com_data.txt  www.alipay.com_data.txt  www.amazon.com_data.txt  www.amazon.de_data.txt  www.aparat.com_data.txt  www.apple.com_data.txt  www.baidu.com_data.txt  www.bbc.co.uk_data.txt  www.bbc.com_data.txt  www.bilibili.com_data.txt  www.bing.com_data.txt  www.blogspot.com_data.txt  www.bongacams.com_data.txt  www.chase.com_data.txt  www.cnblogs.com_data.txt  www.craigslist.org_data.txt  www.daum.net_data.txt  www.douban.com_data.txt  www.ebay.com_data.txt  www.ebay.de_data.txt  www.facebook.com_data.txt  www.fandom.com_data.txt  www.force.com_data.txt  www.gmw.cn_data.txt  www.google.cn_data.txt  www.google.co.in_data.txt  www.google.co.jp_data.txt  www.google.co.uk_data.txt  www.google.com.br_data.txt  www.google.com.hk_data.txt  www.google.com.mx_data.txt  www.google.com_data.txt  www.google.de_data.txt  www.google.es_data.txt  www.google.fr_data.txt  (+47 more)
SECube_Overheads/src/: CMakeLists.txt  main.c  nss.c
SECube_Overheads/src/secube-host/: L0.c  L0.h  L1.c  L1.h  aes256.c  aes256.h  crc16.c  pbkdf2.c  se3_common.c  se3_common.h  se3c0def.h  se3c1def.h  se3comm.c  se3comm.h
stringMatching/: README
stringMatching/TestRun 1/: amazon.csv
stringMatching/TestRun 2/: amazon.csv
(+44 files in other folders)
